# obs-devices

./: .gitignore  README.md  discovery.py  install.sh  install_all.sh  install_certus.sh  main.py  pc_setup.sh  pyproject.toml  requirements.txt
certus/: certus_config.yaml  run.py
config/: default_certus_config.yaml  default_encoders_config.yaml
cpp/certus/: makefile  stream_packets.c
docs/: certus.md  encoder.md  imu.md  ntp.md
imu_certus/: install_certus.sh
imu_certus/cpp/certus/: an_packet_protocol.h  stream_packets.c
imu_certus/cpp/certus/rs232/: README.md
install_scripts/: install_astrometry.sh  install_cameras.sh  install_certus.sh  install_encoders.sh  install_ids_cam.sh  install_pc_setup.sh
install_scripts/assets/: astrometry.cfg
obs_astro/: plate_solve.py
obs_cameras/: alvium.py  base.py  ids.py  zwo.py
obs_certus/: __main__.py  monitor.py  run.py
obs_certus/cpp/certus/: an_packet_protocol.c  ins_packets.c  ins_packets.h  makefile  stream_packets.c
obs_cli/: cli.py  cli_autocomplete.py  cli_find_home.py  cli_utils.py
obs_controller/: controller.py
obs_display/: display.py
obs_encoders/: __main__.py  monitor.py  run.py
obs_overlay/: overlay.py
obs_target/: parse.py  sky_test.py  target.py
obs_tui/: config.yaml  tui.py
obs_utils/: context.py  discovery.py  state_plotter.py
pc_config/lua/: options.lua
pc_config/nvim/lua/: autocmds.lua
pc_config/nvim/lua/plugins/: init.lua
pc_setup/: gnome-terminal-profiles.dconf  pc_setup.sh
pc_setup/nvim/: init.lua
run_scripts/: main.py
tui/: __main__.py  config.yaml
(+2 files in other folders)
