[project]
name = "obs-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=6.5.0",
    "pyserial-asyncio>=0.6",
    "pyudev>=0.24.4",
    "pyyaml>=6.0.3",
    "pyzmq>=27.1.0",
    "rich>=14.2.0",
    "uvloop>=0.22.1",
]

[tool.setuptools]
packages = ["obs_utils", "tui"]

[project.scripts]
obs-tui = "tui.__main__:main"
obs-show-devices = "obs_utils.discovery:print_search"
